--- a/README
+++ b/README
@@ -3,11 +3,10 @@ License:
 
 Requirements:
 	* Python
-	* python-twitter: http://code.google.com/p/python-twitter/
-	* python-twitter patch for native retweet:
-		http://code.google.com/p/python-twitter/issues/detail?id=130
+	* OAuth2
 
 Setup:
+	* Put the bot.py and the _twitter.py in the same directory
 	* Edit the config and API sections in bot.py
 
 Run:
